Fixes: expression groupby dropdown, to not be uppercase for label, sigma icon only shows for sum, not blurring query, when whole query disabled, tooltip on query level icons

--- a/frontend/src/app/shared/modules/sharedcomponents/components/query-editor-proto/query-editor-proto.component.scss
+++ b/frontend/src/app/shared/modules/sharedcomponents/components/query-editor-proto/query-editor-proto.component.scss
@@ -755,7 +755,8 @@
         // query disabled
         .namespace-wrapper.query-disabled {
             & + .metric-wrapper {
-                filter: grayscale(100%) blur(1px);
+                filter: grayscale(100%);
+                opacity: .85;
                 pointer-events: none;
             }
         }
